overmind-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overmind
spec:
  replicas: 3
  selector:
    matchLabels:
      app: overmind
  template:
    metadata:
      labels:
        app: overmind
        tier: web
    spec:
      containers:
        - resources: {}
          name: overmind
          image: kevinjqiu/overmind:1
          imagePullPolicy: Always
