couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: couchdb
    labels:
        app: couchdb
        tier: db
spec:
    selector:
        tier: db
    type: NodePort
    ports:
        - port: 5984
