hugo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: hugo
