nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: nginx-hello
