aksHello-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akshello-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /hello-world(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld
                port:
                    number: 80
