nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-helloworld.aks-dns-deabe958.hcp.koreasouth.azmk8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-hello
            port: 
              number: 30779
